--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                 </ul>
             </div>
 
-                <h3>ABOUT ME</h3>
+                <h3>ABOUT ME!</h3>
             
         <div class="container-fluid">
                 <div class="row">
